Correctly cast hyperlinks in GetURI

https://bugzilla.gnome.org/show_bug.cgi?id=683182